# AI-agent-exercise

./: .env.example  .gitignore  README.md  Taskfile.yml  compose.yml  deepeval.config.yaml  filebeat.yml  kibana.yml  pyproject.toml  sonar-project.properties
scripts/: format_and_lint.ps1
src/: agent_main.py  agent_runner.py  app.py  llm.py  main.py
src/agent/: loop.py  prompts.py
src/api/: server.py
src/mcp_client/: client.py  mcp_client.py  mcp_server.py  server.py  tools.py
src/rag/: agentic_retriever.py  chunker.py  embeddings.py  evaluator.py  index.py  llm.py  loader.py  retriever.py  rewriter.py
storage/PL/: Demo Devapo KSeF Integrator [KZ0B0IoVM14]_enhanced.txt  Walidacja faktur KSeF -  Devapo KSeF Integrator [U3RNXzXqr8A]_enhanced.txt
storage/documents/: Camunda Tutorial： Camunda 7 workflow of code delegation using Java Delegates [n7T28P8EFcc]_enhanced.txt  Camunda Tutorial： How to use the DMN Standard in Camunda solutions？ [-_ThdUwt5N4]_enhanced.txt  Camunda Tutorial： Managing a process instance in Embedded and Standalone editions of Camunda [lWy5oYhzOr4]_enhanced.txt  Camunda Tutorial： Signal Event Concept and Use Example ｜ BPMN [w7sMVvHDPNQ]_enhanced.txt  Devapo explains process automation using Camunda [BXW4sLlKrSA]_enhanced.txt  Devapo x CamundaCon 2023 [4b65HC3c0M4]_enhanced.txt  Jak z pomocą AI tworzyć prosto i szybko raporty finansowe？ [x20jJ3roEQY]_enhanced.txt  KSeF, a zarządzanie dokumentacją. Mapa procesów wokół KSeF [ctj3-duUc_U]_enhanced.txt  Lista faktur sprzedażowych KSeF - Devapo KSeF Integrator [LlsRAMh0-Bw]_enhanced.txt  Notyfikacje KSeF - Jak działa  Devapo KSeF Integrator [M41R74_PrNI]_enhanced.txt  Proste projektowanie procesów ubezpieczeniowych z technologią IBM [ra404RdtBZs]_enhanced.txt
tasks/: cleanup.ps1  generate_diagrams.ps1  run_native_dev_application.ps1  run_windows_dev_application.ps1  static_analysis_and_tests.ps1  test_api.ps1  wait_for_api.ps1
test/: conftest.py  test_ask_endpoint.py  test_chunker.py  test_embeddings.py  test_faiss.py  test_main.py  test_rag_flow.py
test/api/: test_api.py
test/integration/: test_persistence.py  test_rag_integration.py
test/unit/: test_chunker.py  test_embeddings.py  (+1 more)
tests/: conftest.py  test_agent_loop.py  test_agentic_retriever.py  test_app_extra.py  test_evaluator.py  test_llm_adapter.py  test_mcp_client.py  test_mcp_server.py  test_mcp_tools.py  test_rewriter.py
(+69 files in other folders)
