[project]
name = "logged-time-reporting"
version = "1.0.0"
description = "Simple template project for Python Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.2",
    "flask>=3.1.2",
    "numpy>=2.3.5",
    "openai>=2.14.0",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pip-audit>=2.9.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "F", "E", "I001", "W", "B", "Q",
    "S", "ARG", "DTZ", "G",
    "ISC", "RSE", "PGH004",
    "PIE", "PT", "RUF", "SIM", "TCH",
    "TRY", "UP", "YTT", "FIX001",
    "C4", "PERF", "ASYNC", "A", "N",
    "T10", "T20", "FLY",
    "I", "F401",
]
ignore = ["S101", "PT001", "TRY002", "TRY003", "UP040"]
fixable = [
    "A", "C", "C4", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT",
    "FLY", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT",
    "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "T10", "T20", "TCH",
    "TID", "TRY", "UP", "YTT", "I001",
]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"app/{config,data_types}.py" = ["UP007"]
"components/*.py" = ["UP007"]
"__init__.py" = ["F401"]
"tests/*" = ["S311", "ARG001", "ANN"]
"test/*" = ["S311", "ARG001", "ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:.*SwigPy.*:DeprecationWarning",
  "ignore:.*swigvarlink.*:DeprecationWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]